# eshop

./: Cargo.toml
app/: Cargo.toml
app/src/: config.rs  lib.rs  main.rs
app/src/config/: devel.toml  prod.toml
entity/src/entities/: category.rs  category_translation.rs  language.rs  mod.rs  prelude.rs  product.rs  product_category.rs  product_translation.rs  sku.rs  sku_product.rs  sku_translation.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241130_132845_create_table_user.rs  m20241130_160519_create_table_language.rs  m20241201_142426_create_table_category.rs  m20241201_142430_create_table_product.rs  m20241206_175614_create_table_product_category.rs  m20241209_192555_create_table_sku.rs  m20241209_192808_create_table_sku_product.rs  m20241231_112401_seed_data.rs
scripts/: database.sh
